@@ -49,46 +49,46 @@ installlocalheaders:
 	@if test "$(INSTALLHEADERS)" != "" ; then \
 		echo creating directory $(includedir) ; \
 		it="$(INSTALLHEADERS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(includedir) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$$i $(includedir) ; \
-	                echo "installing $$i in $(includedir)" ; \
+			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$$i $(INSTALL_PREFIX)$(includedir) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(includedir)" ; \
 	        done \
 	fi
 	@if test "$(INSTALLBUILTHEADERS)" != "" ; then \
 		echo creating directory $(includedir) ; \
 		it="$(INSTALLBUILTHEADERS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(includedir) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $$i $(includedir) ; \
-	                echo "installing $$i in $(includedir)" ; \
+			$(INSTALL_DATA) $$i $(INSTALL_PREFIX)$(includedir) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(includedir)" ; \
 	        done \
 	fi
 	@if test "$(INCLUDESUBDIRHEADERS)" != "" ; then \
 		echo creating directory $(includedir)/$(INCLUDESUBDIR) ; \
 		it="$(INCLUDESUBDIRHEADERS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(includedir)/$(INCLUDESUBDIR) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$(INCLUDESUBDIR)/$$i $(includedir)/$(INCLUDESUBDIR) ; \
-	                echo "installing $$i in $(includedir)/$(INCLUDESUBDIR)" ; \
+			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$(INCLUDESUBDIR)/$$i $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR)" ; \
 	        done \
 	fi
 	@if test "$(INCLUDESUBDIRHEADERS2)" != "" ; then \
 		echo creating directory $(includedir)/$(INCLUDESUBDIR2) ; \
 		it="$(INCLUDESUBDIRHEADERS2)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(includedir)/$(INCLUDESUBDIR2) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR2) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$(INCLUDESUBDIR2)/$$i $(includedir)/$(INCLUDESUBDIR2) ; \
-	                echo "installing $$i in $(includedir)/$(INCLUDESUBDIR2)" ; \
+			$(INSTALL_DATA) $(top_srcdir)/include/net-snmp/$(INCLUDESUBDIR2)/$$i $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR2) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR2)" ; \
 	        done \
 	fi
 	@if test "$(INSTALLBUILTSUBDIRHEADERS)" != "" ; then \
 		echo creating directory $(includedir)/$(INSTALLBUILTSUBDIR) ; \
 		it="$(INSTALLBUILTSUBDIRHEADERS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(includedir)/$(INSTALLBUILTSUBDIR) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(includedir)/$(INSTALLBUILTSUBDIR) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $$i $(includedir)/$(INSTALLBUILTSUBDIR) ; \
-	                echo "installing $$i in $(includedir)/$(INSTALLBUILTSUBDIR)" ; \
+			$(INSTALL_DATA) $$i $(INSTALL_PREFIX)$(includedir)/$(INSTALLBUILTSUBDIR) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(includedir)/$(INSTALLBUILTSUBDIR)" ; \
 	        done \
 	fi
 
@@ -96,10 +96,10 @@ installucdheaders:
 	@if test "$(INSTALLUCDHEADERS)" != "" ; then \
 		echo creating directory $(ucdincludedir) ; \
 		it="$(INSTALLUCDHEADERS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(ucdincludedir) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(ucdincludedir) ; \
 	        for i in $$it ; do \
-			$(INSTALL_DATA) $(top_srcdir)/include/ucd-snmp/$$i $(ucdincludedir) ; \
-	                echo "installing $$i in $(ucdincludedir)" ; \
+			$(INSTALL_DATA) $(top_srcdir)/include/ucd-snmp/$$i $(INSTALL_PREFIX)$(ucdincludedir) ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(ucdincludedir)" ; \
 	        done \
 	fi
 
@@ -107,36 +107,36 @@ uninstallheaders:
 	@if test "$(INSTALLHEADERS)" != "" ; then \
 		it="$(INSTALLHEADERS)" ; \
 	        for i in $$it ; do \
-			rm -f $(includedir)/$$i ; \
-	                echo "removing $$i from $(includedir)" ; \
+			rm -f $(INSTALL_PREFIX)$(includedir)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(includedir)" ; \
 	        done \
 	fi
 	@if test "$(INSTALLBUILTHEADERS)" != "" ; then \
 		it="$(INSTALLBUILTHEADERS)" ; \
 	        for i in $$it ; do \
-			rm -f $(includedir)/`basename $$i` ; \
-	                echo "removing $$i from $(includedir)" ; \
+			rm -f $(INSTALL_PREFIX)$(includedir)/`basename $$i` ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(includedir)" ; \
 	        done \
 	fi
 	@if test "$(INCLUDESUBDIRHEADERS)" != "" ; then \
 		it="$(INCLUDESUBDIRHEADERS)" ; \
 	        for i in $$it ; do \
-			rm -f $(includedir)/$(INCLUDESUBDIR)/$$i ; \
-	                echo "removing $$i from $(includedir)/$(INCLUDESUBDIR)" ; \
+			rm -f $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR)" ; \
 	        done \
 	fi
 	@if test "$(INCLUDESUBDIRHEADERS2)" != "" ; then \
 		it="$(INCLUDESUBDIRHEADERS2)" ; \
 	        for i in $$it ; do \
-			rm -f $(includedir)/$(INCLUDESUBDIR2)/$$i ; \
-	                echo "removing $$i from $(includedir)/$(INCLUDESUBDIR2)" ; \
+			rm -f $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR2)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(includedir)/$(INCLUDESUBDIR2)" ; \
 	        done \
 	fi
 	@if test "$(INSTALLBUILTSUBDIRHEADERS)" != "" ; then \
 		it="$(INSTALLBUILTSUBDIRHEADERS)" ; \
 	        for i in $$it ; do \
-			rm -f $(includedir)/$(INSTALLBUILTSUBDIR)/`basename $$i` ; \
-	                echo "removing $$i from $(includedir)/$(INSTALLBUILTSUBDIR)" ; \
+			rm -f $(INSTALL_PREFIX)$(includedir)/$(INSTALLBUILTSUBDIR)/`basename $$i` ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(includedir)/$(INSTALLBUILTSUBDIR)" ; \
 	        done \
 	fi
 
@@ -150,11 +150,11 @@ installlibs: installlocallibs @installucdlibs@ installsubdirlibs
 installlocallibs: $(INSTALLLIBS)
 	@if test "$(INSTALLLIBS)" != ""; then \
 		it="$(INSTALLLIBS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(libdir) ; \
-                $(INSTALL) $(INSTALLLIBS) $(libdir) ;              \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(libdir) ; \
+                $(INSTALL) $(INSTALLLIBS) $(INSTALL_PREFIX)$(libdir) ;       \
 	        for i in $$it ; do    \
-	                echo "installing $$i in $(libdir)"; \
-	                $(RANLIB) $(libdir)/$$i ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(libdir)"; \
+	                $(RANLIB) $(INSTALL_PREFIX)$(libdir)/$$i ; \
 	        done ; \
 		$(LIB_LDCONFIG_CMD) ; \
 	fi
@@ -162,11 +162,11 @@ installlocallibs: $(INSTALLLIBS)
 installucdlibs: $(INSTALLUCDLIBS)
 	@if test "$(INSTALLUCDLIBS)" != ""; then \
 		it="$(INSTALLUCDLIBS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(libdir) ; \
-                $(INSTALL) $(INSTALLUCDLIBS) $(libdir) ;              \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(libdir) ; \
+                $(INSTALL) $(INSTALLUCDLIBS) $(INSTALL_PREFIX)$(libdir) ;    \
 	        for i in $$it ; do    \
-	                echo "installing $$i in $(libdir)"; \
-	                $(RANLIB) $(libdir)/$$i ; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(libdir)"; \
+	                $(RANLIB) $(INSTALL_PREFIX)$(libdir)/$$i ; \
 	        done ; \
 		$(LIB_LDCONFIG_CMD) ; \
 	fi
@@ -187,8 +187,8 @@ uninstalllibs:
 	@if test "$(INSTALLLIBS)" != ""; then \
 		it="$(INSTALLLIBS)" ; \
 	        for i in $$it ; do   \
-		        $(UNINSTALL) $(libdir)/$$i ; \
-	                echo "removing $$i from $(libdir)"; \
+		        $(UNINSTALL) $(INSTALL_PREFIX)$(libdir)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(libdir)"; \
 	        done \
 	fi
 
@@ -201,11 +201,11 @@ installbin: installlocalbin installsubdirbin
 
 installlocalbin: $(INSTALLBINPROGS)
 	@if test "$(INSTALLBINPROGS) $(INSTALLBINSCRIPTS)" != " "; then \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(bindir) ; \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(bindir) ; \
 		it="$(INSTALLBINPROGS) $(INSTALLBINSCRIPTS)" ; \
-	        $(INSTALL) $(INSTALLBINPROGS) $(INSTALLBINSCRIPTS) $(bindir) ;              \
+	        $(INSTALL) $(INSTALLBINPROGS) $(INSTALLBINSCRIPTS) $(INSTALL_PREFIX)$(bindir) ;              \
 	        for i in $$it ; do   \
-	                echo "installing $$i in $(bindir)"; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(bindir)"; \
 	        done \
 	fi
 
@@ -225,8 +225,8 @@ uninstallbin:
 	@if test "$(INSTALLBINPROGS) $(INSTALLBINSCRIPTS)" != " "; then \
 		it="$(INSTALLBINPROGS) $(INSTALLBINSCRIPTS)" ; \
 	        for i in $$it ; do   \
-		        $(UNINSTALL) $(bindir)/$$i ; \
-	                echo "removing $$i from $(bindir)"; \
+		        $(UNINSTALL) $(INSTALL_PREFIX)$(bindir)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(bindir)"; \
 	        done \
 	fi
 
@@ -240,10 +240,10 @@ installsbin: installlocalsbin installsubdirsbin
 installlocalsbin: $(INSTALLSBINPROGS)
 	@if test "$(INSTALLSBINPROGS)" != ""; then \
 		it="$(INSTALLSBINPROGS)" ; \
-		$(SHELL) $(top_srcdir)/mkinstalldirs $(sbindir) ; \
-	        $(INSTALL) $(INSTALLSBINPROGS) $(sbindir) ;              \
+		$(SHELL) $(top_srcdir)/mkinstalldirs $(INSTALL_PREFIX)$(sbindir) ; \
+	        $(INSTALL) $(INSTALLSBINPROGS) $(INSTALL_PREFIX)$(sbindir) ;  \
 	        for i in $$it ; do   \
-	                echo "installing $$i in $(sbindir)"; \
+	                echo "installing $$i in $(INSTALL_PREFIX)$(sbindir)"; \
 	        done \
 	fi
 
@@ -263,8 +263,8 @@ uninstallsbin:
 	@if test "$(INSTALLSBINPROGS)" != ""; then \
 		it="$(INSTALLSBINPROGS)" ; \
 	        for i in $$it ; do   \
-		        $(UNINSTALL) $(sbindir)/$$i ; \
-	                echo "removing $$i from $(sbindir)"; \
+		        $(UNINSTALL) $(INSTALL_PREFIX)$(sbindir)/$$i ; \
+	                echo "removing $$i from $(INSTALL_PREFIX)$(sbindir)"; \
 	        done \
 	fi
 
